[gd_scene load_steps=2 format=3 uid="uid://c8j4k9l2m3n5p"]

[ext_resource type="Script" path="res://minigames/Riddle/scenes/Main.gd" id="1_riddle"]

[node name="RiddleMinigame" type="CanvasLayer"]
script = ExtResource("1_riddle")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="DarkOverlay" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.85)

[node name="MainContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="HeaderContainer" type="HBoxContainer" parent="Control/MainContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TimerLabel" type="Label" parent="Control/MainContainer/HeaderContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 32
text = "01:30"

[node name="Spacer" type="Control" parent="Control/MainContainer/HeaderContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HintButton" type="Button" parent="Control/MainContainer/HeaderContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.9, 0.3, 1)
theme_override_font_sizes/font_size = 20
text = "ðŸ’¡"

[node name="HintLabel" type="Label" parent="Control/MainContainer/HeaderContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.5, 0, 1)
theme_override_font_sizes/font_size = 24
text = "Hint: 10"

[node name="InstructionPanel" type="PanelContainer" parent="Control/MainContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="Control/MainContainer/InstructionPanel"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MainContainer/InstructionPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="TitleLabel" type="Label" parent="Control/MainContainer/InstructionPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.85, 0.4, 1)
theme_override_font_sizes/font_size = 28
text = "\"Riddle, What Am I.\""
horizontal_alignment = 1

[node name="RiddlePanel" type="PanelContainer" parent="Control/MainContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="Control/MainContainer/RiddlePanel"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="RiddleLabel" type="Label" parent="Control/MainContainer/RiddlePanel/MarginContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.95, 0.95, 0.95, 1)
theme_override_font_sizes/font_size = 24
text = "\"Round I go, around your hand,
I shine and sparkle, isn't that grand?\""
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="AnswerContainer" type="HBoxContainer" parent="Control/MainContainer"]
layout_mode = 2
alignment = 1

[node name="AnswerDisplay" type="Label" parent="Control/MainContainer/AnswerContainer"]
layout_mode = 2
mouse_filter = 0
theme_override_colors/font_color = Color(1, 0.9, 0.5, 1)
theme_override_font_sizes/font_size = 36
text = "_ _ _ _ (Click to undo)"
horizontal_alignment = 1

[node name="LetterContainer" type="VBoxContainer" parent="Control/MainContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Row1" type="HBoxContainer" parent="Control/MainContainer/LetterContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Letter1" type="Button" parent="Control/MainContainer/LetterContainer/Row1"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 24
text = "A"

[node name="Letter2" type="Button" parent="Control/MainContainer/LetterContainer/Row1"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 24
text = "W"

[node name="Letter3" type="Button" parent="Control/MainContainer/LetterContainer/Row1"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 24
text = "H"

[node name="Letter4" type="Button" parent="Control/MainContainer/LetterContainer/Row1"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 24
text = "V"

[node name="Letter5" type="Button" parent="Control/MainContainer/LetterContainer/Row1"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 24
text = "M"

[node name="Letter6" type="Button" parent="Control/MainContainer/LetterContainer/Row1"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 24
text = "R"

[node name="Letter7" type="Button" parent="Control/MainContainer/LetterContainer/Row1"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 24
text = "T"

[node name="Letter8" type="Button" parent="Control/MainContainer/LetterContainer/Row1"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 24
text = "K"

[node name="Row2" type="HBoxContainer" parent="Control/MainContainer/LetterContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Letter9" type="Button" parent="Control/MainContainer/LetterContainer/Row2"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 24
text = "E"

[node name="Letter10" type="Button" parent="Control/MainContainer/LetterContainer/Row2"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 24
text = "C"

[node name="Letter11" type="Button" parent="Control/MainContainer/LetterContainer/Row2"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 24
text = "B"

[node name="Letter12" type="Button" parent="Control/MainContainer/LetterContainer/Row2"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 24
text = "E"

[node name="Letter13" type="Button" parent="Control/MainContainer/LetterContainer/Row2"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 24
text = "O"

[node name="Letter14" type="Button" parent="Control/MainContainer/LetterContainer/Row2"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 24
text = "L"

[node name="Letter15" type="Button" parent="Control/MainContainer/LetterContainer/Row2"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 24
text = "I"

[node name="Letter16" type="Button" parent="Control/MainContainer/LetterContainer/Row2"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 24
text = "G"

[node name="FeedbackLabel" type="Label" parent="Control/MainContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0.4, 1)
theme_override_font_sizes/font_size = 28
text = ""
horizontal_alignment = 1
vertical_alignment = 1
visible = false
